[package]
name = "hello"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
rsa = "0.9"
base64 = "0.21"
chrono = "0.4"
num-bigint-dig = "0.8"
axum = "0.7"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
